remove design and finishing
