# app/design/handler.go
@@ -1,214 +1,0 @@
-package design
-
-import (
-	"github.com/jihanlugas/sistem-percetakan/jwt"
-	"github.com/jihanlugas/sistem-percetakan/request"
-	"github.com/jihanlugas/sistem-percetakan/response"
-	"github.com/jihanlugas/sistem-percetakan/utils"
-	"github.com/labstack/echo/v4"
-	"net/http"
-	"strings"
-)
-
-type Handler struct {
-	usecase Usecase
-}
-
-func NewHandler(usecase Usecase) Handler {
-	return Handler{
-		usecase: usecase,
-	}
-}
-
-// Page
-// @Tags Design
-// @Security BearerAuth
-// @Accept json
-// @Produce json
-// @Param req query request.PageDesign false "url query string"
-// @Success      200  {object}	response.Response
-// @Failure      500  {object}  response.Response
-// @Router /design [get]
-func (h Handler) Page(c echo.Context) error {
-	var err error
-
-	loginUser, err := jwt.GetUserLoginInfo(c)
-	if err != nil {
-		return response.Error(http.StatusBadRequest, response.ErrorHandlerGetUserInfo, err, nil).SendJSON(c)
-	}
-
-	req := new(request.PageDesign)
-	if err = c.Bind(req); err != nil {
-		return response.Error(http.StatusBadRequest, response.ErrorHandlerBind, err, nil).SendJSON(c)
-	}
-
-	utils.TrimWhitespace(req)
-
-	err = c.Validate(req)
-	if err != nil {
-		return response.Error(http.StatusBadRequest, response.ErrorHandlerFailedValidation, err, response.ValidationError(err)).SendJSON(c)
-	}
-
-	if req.CompanyID == "" {
-		req.CompanyID = loginUser.CompanyID
-	} else {
-		if jwt.IsSaveCompanyIDOR(loginUser, req.CompanyID) {
-			return response.Error(http.StatusBadRequest, response.ErrorHandlerIDOR, err, nil).SendJSON(c)
-		}
-	}
-
-	data, count, err := h.usecase.Page(loginUser, *req)
-	if err != nil {
-		return response.Error(http.StatusBadRequest, err.Error(), err, nil).SendJSON(c)
-	}
-
-	return response.Success(http.StatusOK, response.SuccessHandler, response.PayloadPagination(req, data, count)).SendJSON(c)
-}
-
-// GetById
-// @Tags Design
-// @Security BearerAuth
-// @Accept json
-// @Produce json
-// @Param id path string true "ID"
-// @Query preloads query string false "preloads"
-// @Success      200  {object}	response.Response
-// @Failure      500  {object}  response.Response
-// @Router /design/{id} [get]
-func (h Handler) GetById(c echo.Context) error {
-	var err error
-
-	loginUser, err := jwt.GetUserLoginInfo(c)
-	if err != nil {
-		return response.Error(http.StatusBadRequest, response.ErrorHandlerGetUserInfo, err, nil).SendJSON(c)
-	}
-
-	id := c.Param("id")
-	if id == "" {
-		return response.Error(http.StatusBadRequest, response.ErrorHandlerGetParam, err, nil).SendJSON(c)
-	}
-
-	preloads := c.QueryParam("preloads")
-	preloadSlice := strings.Split(preloads, ",")
-
-	vDesign, err := h.usecase.GetById(loginUser, id, preloadSlice...)
-	if err != nil {
-		return response.Error(http.StatusBadRequest, err.Error(), err, nil).SendJSON(c)
-	}
-
-	return response.Success(http.StatusOK, response.SuccessHandler, vDesign).SendJSON(c)
-}
-
-// Create
-// @Tags Design
-// @Security BearerAuth
-// @Accept json
-// @Produce json
-// @Param req body request.CreateDesign true "json req body"
-// @Success      200  {object}	response.Response
-// @Failure      500  {object}  response.Response
-// @Router /design [post]
-func (h Handler) Create(c echo.Context) error {
-	var err error
-
-	loginUser, err := jwt.GetUserLoginInfo(c)
-	if err != nil {
-		return response.Error(http.StatusBadRequest, response.ErrorHandlerGetUserInfo, err, nil).SendJSON(c)
-	}
-
-	req := new(request.CreateDesign)
-	if err = c.Bind(req); err != nil {
-		return response.Error(http.StatusBadRequest, response.ErrorHandlerBind, err, nil).SendJSON(c)
-	}
-
-	utils.TrimWhitespace(req)
-
-	err = c.Validate(req)
-	if err != nil {
-		return response.Error(http.StatusBadRequest, response.ErrorHandlerFailedValidation, err, response.ValidationError(err)).SendJSON(c)
-	}
-
-	if jwt.IsSaveCompanyIDOR(loginUser, req.CompanyID) {
-		return response.Error(http.StatusBadRequest, response.ErrorHandlerIDOR, err, nil).SendJSON(c)
-	}
-
-	err = h.usecase.Create(loginUser, *req)
-	if err != nil {
-		return response.Error(http.StatusBadRequest, err.Error(), err, nil).SendJSON(c)
-	}
-
-	return response.Success(http.StatusOK, response.SuccessHandler, nil).SendJSON(c)
-}
-
-// Update
-// @Tags Design
-// @Security BearerAuth
-// @Accept json
-// @Produce json
-// @Param id path string true "ID"
-// @Param req body request.UpdateDesign true "json req body"
-// @Success      200  {object}	response.Response
-// @Failure      500  {object}  response.Response
-// @Router /design/{id} [put]
-func (h Handler) Update(c echo.Context) error {
-	var err error
-
-	loginUser, err := jwt.GetUserLoginInfo(c)
-	if err != nil {
-		return response.Error(http.StatusBadRequest, response.ErrorHandlerGetUserInfo, err, nil).SendJSON(c)
-	}
-
-	id := c.Param("id")
-	if id == "" {
-		return response.Error(http.StatusBadRequest, response.ErrorHandlerGetParam, err, nil).SendJSON(c)
-	}
-
-	req := new(request.UpdateDesign)
-	if err = c.Bind(req); err != nil {
-		return response.Error(http.StatusBadRequest, response.ErrorHandlerBind, err, nil).SendJSON(c)
-	}
-
-	utils.TrimWhitespace(req)
-
-	err = c.Validate(req)
-	if err != nil {
-		return response.Error(http.StatusBadRequest, response.ErrorHandlerFailedValidation, err, response.ValidationError(err)).SendJSON(c)
-	}
-
-	err = h.usecase.Update(loginUser, id, *req)
-	if err != nil {
-		return response.Error(http.StatusBadRequest, err.Error(), err, nil).SendJSON(c)
-	}
-
-	return response.Success(http.StatusOK, response.SuccessHandler, nil).SendJSON(c)
-}
-
-// Delete
-// @Tags Design
-// @Security BearerAuth
-// @Accept json
-// @Produce json
-// @Param id path string true "ID"
-// @Success      200  {object}	response.Response
-// @Failure      500  {object}  response.Response
-// @Router /design/{id} [delete]
-func (h Handler) Delete(c echo.Context) error {
-	var err error
-
-	loginUser, err := jwt.GetUserLoginInfo(c)
-	if err != nil {
-		return response.Error(http.StatusBadRequest, response.ErrorHandlerGetUserInfo, err, nil).SendJSON(c)
-	}
-
-	id := c.Param("id")
-	if id == "" {
-		return response.Error(http.StatusBadRequest, response.ErrorHandlerGetParam, err, nil).SendJSON(c)
-	}
-
-	err = h.usecase.Delete(loginUser, id)
-	if err != nil {
-		return response.Error(http.StatusBadRequest, err.Error(), err, nil).SendJSON(c)
-	}
-
-	return response.Success(http.StatusOK, response.SuccessHandler, nil).SendJSON(c)
-}
